--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:vvo/selenium-standalone.git"
+    "url": "git@github.com:gravityfalls0116/selenium-standalone.git"
   },
   "bugs": {
     "url": "https://github.com/vvo/selenium-standalone/issues"
