--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": ">=6.0.0"
   },
   "scripts": {
-    "start": "DEBUG=selenium-standalone:* ./bin/selenium-standalone install && DEBUG=selenium-standalone:* ./bin/selenium-standalone start",
+    "start": "CMD DEBUG=selenium-standalone:* sudo /home/node/node_modules/selenium-standalone/bin/selenium-standalone install && sudo /home/node/node_modules/selenium-standalone/bin/selenium-standalone start",
     "test": "./bin/selenium-standalone install && mocha",
     "release": "./scripts/release.sh",
     "lint": "eslint --ignore-path .gitignore ."
